--- a/Drip/Drip.csproj
+++ b/Drip/Drip.csproj
@@ -1,17 +1,19 @@
 <Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
-    <PropertyGroup>
-        <TargetFramework>net9.0</TargetFramework>
-        <Nullable>enable</Nullable>
-        <ImplicitUsings>enable</ImplicitUsings>
-    </PropertyGroup>
+  <PropertyGroup>
+    <TargetFramework>net9.0</TargetFramework>
+    <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <PublishSPAForGitHubPages>true</PublishSPAForGitHubPages>
+  </PropertyGroup>
 
-    <ItemGroup>
-        <PackageReference Include="Markdig" Version="0.41.3" />
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.2"/>
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.2" PrivateAssets="all"/>
-        <PackageReference Include="Microsoft.OpenApi" Version="1.6.24" />
-        <PackageReference Include="Microsoft.OpenApi.Readers" Version="1.6.24" />
-    </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Markdig" Version="0.41.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.2"/>
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.2" PrivateAssets="all"/>
+    <PackageReference Include="Microsoft.OpenApi" Version="1.6.24" />
+    <PackageReference Include="Microsoft.OpenApi.Readers" Version="1.6.24" />
+    <PackageReference Include="PublishSPAforGitHubPages.Build" Version="3.0.0" />
+  </ItemGroup>
 
 </Project>
