Refactor DocumentSelector and AppIcon components; update light/dark mode toggle and clean up unused code

--- a/Drip/Drip.csproj
+++ b/Drip/Drip.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="HeadlessBlazor" Version="1.0.0-preview3" />
     <PackageReference Include="Markdig" Version="0.41.3" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.2"/>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.2" PrivateAssets="all"/>
